--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,213 @@
-.App {
-  text-align: center;
+:root {
+  --color-primary: #0f2;
+  --color-secondary: #090;
+  --color-tertiary: #060;
+  --color-quaternary: #0c0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  background-color: #000;
+  height: 100%;
+  overflow: hidden;
+  padding: 0;
+}
+
+.screen {
+  animation: colorPulse 5s infinite ease-in-out;
+  background-image: radial-gradient(#444, #111);
+  box-shadow: 0 0 5vmin 1vmin #000 inset;
+  box-sizing: border-box;
+  font-family: 'Fira Mono', monospace;
+  font-size: 20px;
+  height: 100vh;
+  overflow: hidden;
+  padding: 3vmin;
+  width: 100vw;
+}
+
+.Header {
+  animation: colorPulse 5s infinite ease-in-out;
+  box-sizing: border-box;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+  background: rgba(42, 171, 27, .21);
+  border: 3px solid var(--color-primary);
+}
+
+.Header > .left-text {
+  flex: 1;
+  text-align: left;
+  margin-left: 10px;
+  font-size: 50px;
+}
+
+.Header > .right-text {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 32px;
+}
+
+.Footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1em;
 }
 
-.App-link {
-  color: #61dafb;
+.Footer > .outerLine {
+  width: 30vw;
 }
 
-@keyframes App-logo-spin {
+.Footer > .innerLine {
+  width: 10vw;
+}
+
+.Footer > hr {
+  animation: colorPulse 5s infinite ease-in-out;
+}
+
+.Footer > img {
+  height: 34px;
+  width: 34.88px;
+  filter: invert(65%) sepia(10%) saturate(6319%) hue-rotate(80deg) brightness(108%) contrast(126%);
+}
+
+.myEmail {
+  position: absolute;
+  bottom: 0;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;  
+}
+
+.myEmail > p:last-child:after {
+  content: "";
+}
+
+.screen:before {
+  animation: wave 10s infinite ease-in-out;
+  content: "";
+  height: 20vh;
+  left: 0;
+  opacity: .5;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
+
+.screen:after {
+  background-image: linear-gradient(transparent, transparent 3px, #222);
+  background-size: 4px 4px;
+  bottom: 0;
+  content: "";
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
+
+p {
+  animation: colorPulse 5s infinite ease-in-out;  
+}
+
+img {
+  animation: imgPulse 5s infinite ease-in-out;
+}
+
+p:last-child:after {
+  animation: blink 1s infinite;
+  content: "_";
+}
+
+@keyframes t {
   from {
-    transform: rotate(0deg);
+    background-size: 0 200%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@keyframes b {
+  50% {
+    background-position: 0 -100%, 0 0;
+  }
+}
+
+@keyframes colorPulse {
+  0%, 100% {
+    color: var(--color-primary);
+    border-color: var(--color-primary);
+  }
+
+  48%, 52% {
+    color: var(--color-secondary);
+    border-color: var(--color-secondary);
+  }
+
+  50% {
+    color: var(--color-tertiary);
+    border-color: var(--color-tertiary);
+  }
+}
+
+@keyframes imgPulse {
+  0%, 100% {
+    opacity: .9;
+  }
+
+  48%, 52% {
+    opacity: .5;
+  }
+
+  50% {
+    opacity: .2;
+  }
+}
+
+@keyframes wave {
+  0% {
+    box-shadow: 0 -10vh 20vh var(--color-quaternary);
+    top: -100vh;
+  }
+
+  48%,
+  52% {
+    box-shadow: 0 -10vh 20vh var(--color-secondary);
+  }
+
+  50% {
+    box-shadow: 0 -10vh 20vh var(--color-tertiary);
+  }
+
+  100% {
+    box-shadow: 0 -10vh 20vh var(--color-quaternary);
+    top: 200vh;
+  }
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
   }
 }
