--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 }
 
 .screen {
-  animation: colorPulse 5s infinite ease-in-out;
+  color: var(--color-primary);
   background-image: radial-gradient(#444, #111);
   box-shadow: 0 0 5vmin 1vmin #000 inset;
   box-sizing: border-box;
@@ -37,7 +37,7 @@ body {
 }
 
 .Header {
-  animation: colorPulse 5s infinite ease-in-out;
+  animation: colorPulse 5s ease-in-out;
   box-sizing: border-box;
   width: 100%;
   display: flex;
@@ -62,12 +62,22 @@ body {
   font-size: 32px;
 }
 
+a:link {
+  padding-left: 20px;  
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 a:link,
 a:visited {
   text-decoration: none;
-  animation: colorPulse 5s infinite ease-in-out;
+  color: var(--color-primary);
 }
 
+a:hover {
+  background-color: rgba(0, 102, 0, 0.3);
+}
 
 .Footer {
   position: fixed;
@@ -90,7 +100,7 @@ a:visited {
 }
 
 .Footer > hr {
-  animation: colorPulse 5s infinite ease-in-out;
+  border-color: var(--color-primary);
 }
 
 .Footer > img {
@@ -136,14 +146,6 @@ a:visited {
   z-index: 2;
 }
 
-p {
-  animation: colorPulse 5s infinite ease-in-out;  
-}
-
-img {
-  animation: imgPulse 5s infinite ease-in-out;
-}
-
 p:last-child:after {
   animation: blink 1s infinite;
   content: "_";
@@ -158,37 +160,6 @@ p:last-child:after {
 @keyframes b {
   50% {
     background-position: 0 -100%, 0 0;
-  }
-}
-
-@keyframes colorPulse {
-  0%, 100% {
-    color: var(--color-primary);
-    border-color: var(--color-primary);
-  }
-
-  48%, 52% {
-    color: var(--color-secondary);
-    border-color: var(--color-secondary);
-  }
-
-  50% {
-    color: var(--color-tertiary);
-    border-color: var(--color-tertiary);
-  }
-}
-
-@keyframes imgPulse {
-  0%, 100% {
-    opacity: .9;
-  }
-
-  48%, 52% {
-    opacity: .5;
-  }
-
-  50% {
-    opacity: .2;
   }
 }
 
