--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,9 @@ body {
   font-size: 20px;
   height: 100vh;
   overflow: hidden;
-  padding: 3vmin;
   width: 100vw;
+  padding: 3vmin;
+
 }
 
 .Header {
@@ -62,7 +63,7 @@ body {
   font-size: 32px;
 }
 
-a:link {
+.right-text a:link {
   padding-left: 20px;  
   padding-right: 20px;
   padding-top: 10px;
@@ -76,19 +77,25 @@ a:visited {
 }
 
 a:hover {
-  background-color: rgba(0, 102, 0, 0.3);
+  background-color: var(--color-tertiary);
 }
 
-.Footer {
+a.active {
+  background-color: var(--color-primary);
+  color: var(--color-tertiary)
+}
+
+.Footer {  
+  font-family: 'Fira Mono', monospace;
+  font-size: 20px;
+  color: #0f2;
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 20vh;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  padding: 1em;
 }
 
 .Footer > .outerLine {
