--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,13 @@ body {
   animation-direction: alternate;
 }
 
+#all::before {
+  animation-name: textflicker;
+  animation-duration: .005s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
 .screen {
   color: var(--color-primary);
   background-image: radial-gradient(#444, #111);
@@ -78,6 +85,14 @@ body {
   padding-bottom: 10px;
 }
 
+hr::before {
+  box-shadow: inherit;
+  animation-name: textflicker;
+  animation-duration: .005s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
 a:link,
 a:visited {
   text-decoration: none;
@@ -95,42 +110,44 @@ a.active {
 
 .Footer {
   font-family: 'Fira Mono', monospace;
-  font-size: 20px;
   color: #0f2;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 20vh;
+  height: 10vh;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
 .Footer>.outerLine {
+  margin-top: 1.5vh;
   width: 30vw;
+  height: 1px;
 }
 
 .Footer>.innerLine {
+  margin-top: 1.5vh;
   width: 10vw;
+  height: 1px;
 }
 
 .Footer>hr {
   border-color: var(--color-primary);
 }
 
-.Footer>img {
-  height: 34px;
-  width: 34.88px;
+.Footer > img {
+  height: 3.4vh;
+  width: 3.5vw;
   filter: invert(65%) sepia(10%) saturate(6319%) hue-rotate(80deg) brightness(108%) contrast(126%);
 }
 
 .myEmail {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 30px;
+  font-size: 1.5rem;
 }
 
 .myEmail>p:last-child:after {
