--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,149 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  margin: 0;  
 }
 
 a {
-  color: inherit;
+  padding: 2rem;
   text-decoration: none;
+  cursor:pointer;
+  color: inherit;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+a:hover {
+  background-color: rgba(59, 155, 211, 0.2);
+}
+
+.linkies {
+  padding-top: 2vh;
+}
+
+.contentShape {
+  top: 25vh;
+  left: 18vw;
+  position:absolute;
+  height: 60vh;
+  width: 60vw;  
+  border: 5px solid transparent;
+  animation: colorPulse 5s infinite ease-in-out, contentShapeExpand 1s ease-out 0s 1;
+  clip-path: polygon(7% 0, 100% 0, 100% 80%, 80% 100%, 0 100%, 0 15%);
+}
+
+@keyframes contentShapeExpand {
+  0% {
+    width: 0vw;
+    height: 0vh;
+  }
+  100% {
+    width: 60vw;
+    height: 60vh;
+  }
+}
+
+.pageContent {
+  margin-top: 5vh;
+  margin-left: 4vw;
+}
+
+.screen {
+  animation:colorPulse 5s infinite ease-in-out;
+  background-image:radial-gradient(#444, #111);
+  box-shadow:0 0 5vmin 1vmin #000 inset;
+  box-sizing:border-box;
+  font-family:'Fira Mono', monospace;
+  font-size:20px;
+  height:100vh;
+  overflow:hidden;
+  width:100vw;  
+}
+
+.screen:after {
+  background-image:linear-gradient(transparent, transparent 3px, #222);
+  background-size:4px 4px;
+  bottom:0;
+  content:"";
+  left:0;
+  pointer-events:none;
+  position:absolute;
+  right:0;
+  top:0;
+  z-index: 10;
+}
+
+p:last-child:after {
+  animation:blink 1s infinite;
+  content:"_";
+}
+
+
+@keyframes colorPulse {
+
+  0%,
+  100% {
+      color: rgb(17, 166, 252, 1);
+      border-color: rgba(17, 166, 252, 1);
+  }
+
+  48%,
+  52% {
+      color: rgba(17, 166, 252, .5);
+      border-color: rgba(17, 166, 252, .5);
+  }
+
+  50% {
+      color: rgba(17, 166, 252, .1);
+      border-color: rgba(17, 166, 252, .1);
+  }
+}
+
+@keyframes blink {
+  50% {
+    opacity:0;
+  }
+}
+
+@keyframes imageBlink {
+  0% {
+    opacity: 100;
+  }
+  10% {
+    opacity: 0;
+  }
+  30% {
+      opacity: 100;
+  }  
+  48% {
+      opacity: 0;
+  }
+  52% {
+      opacity: 100;
+  }
+  50% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 100;
+  }
+  100% {
+    opacity: 0;
+}
+}
+
+@keyframes bgPulse {
+
+  0%,
+  100% {
+    background-color: rgba(59, 155, 211, 0.2);
+    background-position: 0% 50%;
+  }
+
+  48%,
+  52% {
+    background-color: rgba(2, 102, 148, 0.1);
+    background-position: 100% 50%;
+  }
+
+  50% {
+    background-color: rgba(10, 75, 119, 0);
+    background-position: 50% 50%;
   }
 }
