More mobile updates

--- a/app/components/navbar/Navbar.css
+++ b/app/components/navbar/Navbar.css
@@ -36,36 +36,32 @@
 }
 
 .sideBar {
-    height: 50vh;
-    width: 50vw;
-    border: 2px solid transparent;
-
-    animation: colorBlink 5s infinite, bgPulse 5s infinite ease-in-out;
+    height: auto;
+    border: 2px solid rgba(17, 166, 252, 1);
+    background-color: rgba(28, 74, 100, 0.849);
+    border-left: 0;
 }
 
-@keyframes colorBlink {
+.menuButton {
+    position: absolute;
+    border-radius: 0;
+    margin-top: 50%;
+    background-color: rgba(28, 74, 100, 0.849);
+    z-index: 10;
+}
 
-    0%,
-    100% {
-        color: rgb(17, 166, 252, 1);
-        border-color: rgba(17, 166, 252, 1);
-        background-color: rgba(59, 155, 211, 0.2);
-        background-position: 0% 50%;
-    }
+.menuHeader {
+    margin-top: 0;
+    color: rgb(17, 166, 252, 1);    
+    border-bottom: 2px solid rgba(17, 166, 252, 1);
+}
 
-    48%,
-    52% {
-        color: rgba(17, 166, 252, .5);
-        border-color: rgba(17, 166, 252, .5);
-        background-color: rgba(2, 102, 148, 0.1);
-        background-position: 100% 50%;
-    }
+.menuButtons {
+    border-radius: 0;
+    transition: transform .3s ease-in-out;
+}
 
-    50% {
-        color: rgba(17, 166, 252, .1);
-        border-color: rgba(17, 166, 252, .1);
-        background-color: rgba(10, 75, 119, 0);
-        background-position: 50% 50%;
-        scrollbar-color: rgba(17, 166, 252, .1);
-    }
+.menuButtons:hover {
+    transform: scale(1.1);
+    background-color: rgba(59, 155, 211, 0.2);    
 }
