--- a/app/globals.css
+++ b/app/globals.css
@@ -52,7 +52,9 @@ a:hover {
   position: absolute;
   width: 90vw;
   height: 90vh;
-  margin: 5%;
+  margin-top: 10%;
+  margin-left: 5%;
+  margin-bottom: 5%;
   border: 5px solid transparent;
   animation: colorPulse 5s infinite ease-in-out, contentShapeExpand 1s ease-out 0s 1;
   clip-path: polygon(5% 0, 100% 0, 100% 80%, 95% 100%, 0 100%, 0 15%);
@@ -83,7 +85,16 @@ a:hover {
   margin-top: 1rem;
   margin-left: 4vw;
   margin-right: 4vw;
-  height: 45rem;
+  height: 48vh;
+  overflow-y: auto;
+}
+
+.pageContentMobile {
+  padding-right: 3vw;
+  margin-top: 1rem;
+  margin-left: 4vw;
+  margin-right: 4vw;
+  height: 80vh;
   overflow-y: auto;
 }
 
