--- a/app/globals.css
+++ b/app/globals.css
@@ -52,9 +52,7 @@ a:hover {
   position: absolute;
   width: 90vw;
   height: 90vh;
-  margin-top: 10%;
-  margin-left: 5%;
-  margin-bottom: 5%;
+  margin: 5%;
   border: 5px solid transparent;
   animation: colorPulse 5s infinite ease-in-out, contentShapeExpand 1s ease-out 0s 1;
   clip-path: polygon(5% 0, 100% 0, 100% 80%, 95% 100%, 0 100%, 0 15%);
