--- a/app/components/navbar/Navbar.css
+++ b/app/components/navbar/Navbar.css
@@ -1,20 +1,20 @@
 .shape {
     position: absolute;
+
     height: 280px;
     width: 220px;
     margin-left: 30px;
     border: 5px solid transparent;
-    animation: colorPulse 5s infinite ease-in-out;
+    border-color: rgba(17, 166, 252, 1);
+    animation: colorPulse 9.5s ease-in;
     clip-path: polygon(20% 0, 100% 0, 100% 80%, 80% 100%, 0 100%, 0 20%);
-    z-index: 1;
 }
 
 .profile {
     height: 270px;
-    width: 210px;
-    animation: imageBlink 5s ease-in-out;
+    width: 210.5px;
+    animation: imageBlink 5s ease-out;
     filter: hue-rotate(0deg) brightness(60%);
-    z-index: 1;
 }
 
 .profile:hover {
@@ -29,8 +29,9 @@
     width: 80vw;
     border-bottom: 2px solid transparent;
     border-top: 2px solid transparent;
-    border-color: transparent;
-    animation: colorPulse 5s infinite ease-in-out, bgPulse 5s infinite ease-in-out;
+    background-color: rgba(59, 155, 211, 0.2);
+    border-color: rgba(17, 166, 252, 1);
+    animation: colorPulse 9.5s ease-in, bgPulse 9.5s  ease-in;
     clip-path: polygon(0% 0, 100% 0, 100% 0%, 98% 100%, 0 100%, 0% 0%);
     z-index: 1;
 }
